replies being added

--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -223,6 +223,10 @@
   #commentBox {
     transition: all 0.3s ease-in-out; /* Smooth transition for toggling */
   }
+
+  .hidden {
+    display: none;
+  }
   
 }
 
