--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -1364,10 +1364,6 @@ footer {
   margin-top: 2rem;
 }
 
-.block {
-  display: block;
-}
-
 .flex {
   display: flex;
 }
@@ -1859,11 +1855,6 @@ footer {
   padding-bottom: 0.25rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -2221,6 +2212,10 @@ footer {
 #commentBox {
   transition: all 0.3s ease-in-out;
   /* Smooth transition for toggling */
+}
+
+.hidden {
+  display: none;
 }
 
 .invalid\:border-red-500:invalid {
