--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -20,7 +20,7 @@
             </a>
           </li>
           <li class="flex items-center">
-            <div th:if="${isOwner != null && isOwner}">
+            <div th:if="${collection.isOwner != null && collection.isOwner}">
               <a
               class="bg-blue-500 hover:bg-blue-700 text-white text-xs px-1 py-0.5 rounded"
               id="redirectUpdateCollection"
@@ -77,10 +77,10 @@
                     <form th:if="${collection?.id != null}" th:action="@{/collections/{id}/like(id=${collection.id})}" method="post">
                       <input type="hidden" name="collectionId" th:value="${collection.id}" />
                       <input type="hidden" name="userId" th:value="${user.id}" />
-                      <input type="hidden" name="liked" th:value="${collection.isLiked}" />
+
                       <button type="submit" class="likeButton" th:if="${collection.user.id != user.id}">
-                        <span class="pr-2 font-medium" th:if="${isLiked}">&#9829;</span>
-                        <span class="pr-2 font-medium" th:if="${!isLiked}">&#9825;</span>
+                        <span class="pr-2 font-medium" th:if="${collection.isLiked}">&#9829;</span>
+                        <span class="pr-2 font-medium" th:if="${!collection.isLiked}">&#9825;</span>
                       </button>
                       <button type="button" class="likeButton" th:if="${collection.user.id == user.id}" disabled>
                         <span class="pr-2 font-medium">&#9829;</span>
@@ -88,7 +88,7 @@
                     </form>
                   </div>
                   <div class="flex justify-start items-center">
-                    <p class="font-thin" th:text="${likeCount}"></p>
+                    <p class="font-thin" th:text="${collection.likeCount}"></p>
                   </div>
                 </li>
                 <li class="flex flex-row justify-start items-center pr-2">
@@ -153,7 +153,7 @@
       <div class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center">
 
         <div id="footerNavContent" class="footerNav w-full">
-          <div th:if="${isOwner != null && isOwner}" class="w-full">
+          <div th:if="${collection.isOwner != null && collection.isOwner}" class="w-full">
             <!-- Footer for owner -->
             <ul class="flex justify-between items-center w-full" id="footerNavOwner">
               <li>
@@ -187,7 +187,7 @@
             </ul>
           </div>
           
-          <div th:if="${isOwner != null && !isOwner}" class="w-full">
+          <div th:if="${collection.isOwner != null && !collection.isOwner}" class="w-full">
             <!-- Footer for non-owner -->
             <ul class="flex justify-between items-center w-full" id="footerNavUser">
               <li>
