back button and home updates

--- a/src/main/resources/templates/collectionComment.html
+++ b/src/main/resources/templates/collectionComment.html
@@ -7,7 +7,6 @@
     <script src="/js/fadeAnimations.js" defer></script>
     <script src="/js/toggleTruncate.js" defer></script>
     <script src="/js/sinceCreated.js" defer></script>
-    <script src="/js/BackButton/visitedPages.js" defer></script>
     <script src="/js/passIdToComment.js" defer></script>
     <script defer>
       document.addEventListener('DOMContentLoaded', function () {
@@ -45,7 +44,7 @@
       <nav class="navbar">
         <ul class="flex justify-between w-full">
           <li class="flex items-center">
-            <a id="backButton">
+            <a id="backButton" th:href="@{|index#collection-${collection.id}|}">
               <span>&#8592;</span>
             </a>
           </li>
