--- a/src/main/resources/templates/popular.html
+++ b/src/main/resources/templates/popular.html
@@ -7,15 +7,13 @@
 
     <script src="/js/fadeAnimations.js" defer></script>
 
-    <script src="/js/BackButton/visitedPages.js" defer></script>
-
   </head>
   <body>
     <header>
       <nav class="navbar">
         <ul class="flex justify-between w-full">
           <li class="flex items-center">
-            <a id="backButton">
+            <a id="backButton" href="/index">
               <span>&#8592;</span>
             </a>
           </li>
