--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -8,14 +8,13 @@
     <script src="/js/toggleTruncate.js" defer></script>
     <script src="/js/triggerComment.js" defer></script>
     <script src="/js/sinceCreated.js" defer></script>
-    <script src="/js/BackButton/visitedPages.js" defer></script>
   </head>
   <body id="scrollablePage">
     <header>
       <nav class="navbar">
         <ul class="flex justify-between w-full">
           <li class="flex items-center">
-            <a id="backButton">
+            <a id="backButton" th:href="@{|index#collection-${collection.id}|}">
               <span>&#8592;</span>
             </a>
           </li>
