--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -9,7 +9,6 @@
     <script src="/js/toggleOverlay.js" defer></script>
     <script src="/js/windowOpen.js" defer></script>
     <script src="/js/toggleReply.js" defer></script>
-    <script src="/js/BackButton/visitedPages.js" defer></script>
   </head>
 
   <body>
@@ -17,7 +16,7 @@
       <nav class="navbar">
         <ul class="flex justify-between w-full">
           <li class="flex items-center">
-            <a id="backButton">
+            <a id="backButton" href="/collection/${item.collectionId}">
               <span>&#8592;</span>
             </a>
           </li>
