--- a/src/main/resources/templates/updateCollection.html
+++ b/src/main/resources/templates/updateCollection.html
@@ -6,20 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Login</title>
+    <link rel="stylesheet" href="/css/output.css" />
 
     <script th:src="@{/js/previewFile.js}" defer></script>
 
-
-    <script src="/js/BackButton/visitedPages.js" defer></script>
-
-    <link rel="stylesheet" href="/css/output.css" />
   </head>
   <body>
       <header>
         <nav class="navbar">
           <ul class="flex justify-between items-center w-full">
             <li class="flex items-center">
-              <a id="backButton">
+              <a id="backButton" th:href="@{/collection/{id}(id=${collection?.id ?: 'default'})}">
                 <span>&#8592;</span>
               </a>
             </li>
