--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -279,7 +279,7 @@
     </main>
     <footer>
       <div
-        class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center"
+        class="footerNav"
       >
         <div id="footerNavContent" class="footerNav">
           <ul class="flex justify-between items-center w-full">
