--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -754,19 +754,48 @@ body {
   height: 100vh;
   width: 100%;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity, 1));
 }
 
 main {
   top: 3rem;
   bottom: 3rem;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 3rem;
   margin-bottom: 3rem;
   display: flex;
   height: auto;
+  width: 100%;
   flex-grow: 1;
   flex-direction: column;
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1));
+}
+
+@media (min-width: 640px) {
+  main {
+    width: 75%;
+  }
+}
+
+@media (min-width: 768px) {
+  main {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1024px) {
+  main {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1280px) {
+  main {
+    width: 50%;
+  }
 }
 
 nav {
@@ -807,9 +836,10 @@ a {
 header {
   position: fixed;
   top: 0px;
-  height: 3rem;
   width: 100%;
   flex-shrink: 0;
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
 }
 
 footer {
@@ -818,6 +848,8 @@ footer {
   height: 3rem;
   width: 100%;
   flex-shrink: 0;
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity, 1));
 }
 
 .container {
@@ -921,6 +953,8 @@ footer {
 }
 
 .navbar {
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   width: 100%;
   flex-direction: row;
@@ -928,28 +962,49 @@ footer {
   justify-content: space-between;
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
-  padding: 0.75rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+@media (min-width: 640px) {
+  .navbar {
+    width: 75%;
+  }
+}
+
+@media (min-width: 768px) {
+  .navbar {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .navbar {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1280px) {
+  .navbar {
+    width: 50%;
+  }
 }
 
 .footerNav {
   display: flex;
+  height: 3rem;
   width: 100%;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity, 1));
-  padding: 0.75rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .commentNav {
@@ -1504,6 +1559,10 @@ footer {
 
 .flex-grow {
   flex-grow: 1;
+}
+
+.resize {
+  resize: both;
 }
 
 .grid-cols-3 {
